Tweak site information and remove sticky sidebar

--- a/res/theme/davestewart/styles.scss
+++ b/res/theme/davestewart/styles.scss
@@ -104,8 +104,9 @@ input[type="submit"],
 }
 
 #logo {
-  font-family: merriweather-regular, Georgia, serif;
+  font-family: 'Merriweather', Georgia, serif;
   font-size: 50px;
+  font-weight: 300;
   letter-spacing: normal;
   text-transform: none;
   color: #000;
