--- a/res/theme/hoarder/elements/_widgets.scss
+++ b/res/theme/hoarder/elements/_widgets.scss
@@ -1,3 +1,7 @@
+// ---------------------------------------------------------------------------------------------------------------------
+// LAYOUT
+// ---------------------------------------------------------------------------------------------------------------------
+
 .widget {
   border-bottom: 1px solid #ebebec;
   margin: 1.875em 0 0 0;
@@ -17,6 +21,10 @@
   border-bottom: none;
 }
 
+// ---------------------------------------------------------------------------------------------------------------------
+// FORMATTING
+// ---------------------------------------------------------------------------------------------------------------------
+
 .widget-title {
   color: #2c2f32;
   font-family: 'Patua One', Georgia, serif;
@@ -25,77 +33,42 @@
   font-size: 14px;
 }
 
-.widget ul {
-  list-style-type: disc;
-}
-
-.widget > ul,
-.widget_nav_menu ul {
+.widget > ul {
   list-style-type: none;
   margin: 0;
 }
 
-.widget > ul ul.children,
-.widget_nav_menu .sub-menu {
-  list-style: none;
-  margin: 0 0 0 30px;
-}
-
-.widget > ul a,
-.widget > ul > li,
-.widget_nav_menu a {
-  background: #fafafb;
-  border: none;
-  -webkit-border-radius: 2px;
-  border-radius: 2px;
-  color: #414244;
+.widget > ul > li {
   display: block;
-  line-height: 1.5em;
+  padding: 0;
+  border: none;
   margin-bottom: 0.35em;
-  padding: 0.35em 0.84em;
-  -webkit-transition: color .1s linear;
-  -moz-transition: color .1s linear;
-  -ms-transition: color .1s linear;
-  -o-transition: color .1s linear;
-  transition: color .1s linear;
+  background: #fafafb;
+  border-radius: 2px;
 }
 
 .widget > ul a {
-  display: inline;
-  padding: 0;
+  display: block;
+  padding: 0.35em 0.84em;
+  color: #414244;
+  line-height: 1.5em;
+  transition: color .1s linear;
+
+  &:hover {
+    text-decoration: none;
+    color: #ea4848;
+  }
 }
 
-.widget > ul a:hover,
-.widget_nav_menu a:hover {
-  text-decoration: none;
-  color: #ea4848;
-}
+.widget li {
+  .text {
+    background: none !important;
+  }
 
-.widget ol {
-  list-style-type: decimal;
-  margin-bottom: 0;
-}
-
-/* Recent Comments Widget ---------------------------------------------------*/
-.widget .recentcomments {
-  margin-bottom: 0.625em;
-}
-
-.widget .recentcomments a {
-  background: none;
-  color: #ea4848;
-}
-
-.widget .recentcomments a:hover {
-  text-decoration: underline;
-}
-
-/* Search Widget --------------------------------------------------------*/
-.widget_search #s {
-  width: 200px;
-}
-
-.widget_search form,
-.widget_search fieldset {
-  margin: 0;
+  .meta {
+    float: right;
+    font-size: 0.7em;
+    border-radius: 3px;
+    padding: 0px 6px;
+  }
 }
