--- a/res/theme/hoarder/formatting/_general.scss
+++ b/res/theme/hoarder/formatting/_general.scss
@@ -1,4 +1,3 @@
-
 address {
   font-style: italic;
 }
@@ -98,7 +97,6 @@ dl {
 
 table {
   border: 1px solid #ccc;
-  border-width: 1px;
   line-height: 18px;
   margin: 0 0 22px 0;
   text-align: left;
@@ -122,4 +120,28 @@ td {
   padding: 5px;
   vertical-align: middle;
   text-align: center;
+}
+
+
+h3 a:link,
+h3 a:visited {
+  color: #000;
+}
+
+a {
+  transition: none;
+}
+
+pre {
+  border-radius: 3px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+  tab-size: 4;
+  overflow-x: auto;
+  word-wrap: normal;
+}
+
+.entry-content {
+  p, li {
+    line-height: 1.5em;
+  }
 }
