--- a/res/theme/hoarder/layout/_layout.scss
+++ b/res/theme/hoarder/layout/_layout.scss
@@ -1,54 +1,43 @@
+.layout__center {
+  //outline: 1px solid red;
+  width: 980px;
+  margin: 0 auto;
+  padding: 0 20px;
+  box-sizing: border-box;
+}
+
 #header {
   background: #fff;
   border-bottom: 1px solid #ebebec;
-  padding: 2.429em 0 0;
-}
-
-.header-inner {
-  width: 940px;
-  margin: 0 auto;
+  //width: 100vh;
 }
 
 #content {
   display: flex;
-  margin: 2.857em auto;
-  width: 960px;
+  min-height: 500px;
+  margin: 30px auto;
 }
 
 #primary {
-  margin-left: -10px;
-  width: 100%;
+  width: 620px;
 }
 
-.single #primary,
-.page #primary,
-.archive #primary,
-.error404 #primary,
-.search #primary {
+.layout__page #primary,
+.layout__single #primary,
+.layout__archive #primary {
   padding-bottom: 2.5em;
   position: relative;
-  width: 633px;
+  // width: 633px;
 }
 
 #sidebar {
   background: #fff;
-  -webkit-border-radius: 4px;
   border-radius: 4px;
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   padding-top: 1.5em;
   width: 300px;
 }
 
-.layoutCenter {
-  width: 960px;
-  margin: auto;
-}
-
-.layoutInner {
-
-}
-
-.layoutSidebar {
-
+.page-home #primary {
+  width: 100%;
 }
