--- a/res/theme/hoarder/sections/_footer.scss
+++ b/res/theme/hoarder/sections/_footer.scss
@@ -2,7 +2,6 @@
   background: transparent url(/assets/theme/bg-footer.jpg) repeat;
   border-top: 4px solid #0a0c0e;
   color: #A7A7A7;
-  -webkit-box-shadow: 0 -4px 0 rgba(0, 0, 0, .1);
   box-shadow: 0 -4px 0 rgba(0, 0, 0, .1);
 }
 
@@ -12,16 +11,11 @@
 
 #footer a {
   color: #ebebec;
-  -webkit-transition: color .1s linear;
-  -moz-transition: color .1s linear;
-  -ms-transition: color .1s linear;
-  -o-transition: color .1s linear;
   transition: color .1s linear;
-}
-
-#footer a:hover {
-  text-decoration: none;
-  color: #ea4848;
+  &:hover {
+    text-decoration: none;
+    color: #ea4848;
+  }
 }
 
 .footer-col-1,
@@ -36,47 +30,21 @@
   margin-right: 0;
 }
 
-#footer .widget > ul a {
-  background: #22272d;
-  color: #A7A7A7;
+#footer .widget {
+  > ul a {
+    background: #22272d;
+    color: #A7A7A7;
+  }
+
+  > ul li {
+    background: #22272d;
+  }
+
+  > ul a:hover {
+    color: #ea4848;
+  }
 }
 
-#footer .widget > ul li {
-  background: #22272d;
-}
-
-#footer .widget > ul a:hover {
-  color: #ea4848;
-}
-
-#footer .zilla_tweet_widget > ul li {
-  background: transparent;
-  border-top: 1px solid #22272D;
-  color: #A7A7A7;
-  padding: 0.8em 0;
-}
-
-#footer .zilla_tweet_widget > ul li:first-child {
-  border: none;
-  padding-top: 0;
-}
-
-#footer .zilla_tweet_widget > ul a {
-  background: transparent;
-  color: #fff;
-}
-
-#footer .zilla_tweet_widget li > a {
-  color: #414244;
-}
-
-#footer .twitter-link {
-  background: #22272d;
-  border-color: #22272d;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  text-shadow: none;
-}
 
 .footer-lower {
   background: #151619;
@@ -88,7 +56,7 @@
   margin: 0 auto;
   overflow: hidden;
   padding: 4.375em 0 5em;
-  width: 940px;
+  // width: 940px;
 }
 
 .footer-lower .footer-inner {
