Move theme files to root theme folder

--- a/res/theme/elements/_post-hierarchy.scss
+++ b/res/theme/elements/_post-hierarchy.scss
@@ -69,7 +69,7 @@
     text-align: center;
 
     font-size: 8px;
-    font-family: arial;
+    font-family: 'Open Sans', Arial, sans-serif;
     line-height: 10px;
     color: #fff;
     background: #000;
