--- a/res/theme/index.scss
+++ b/res/theme/index.scss
@@ -25,9 +25,9 @@
 
 @import "media/images";
 @import "media/slider";
-@import "media/player";
-@import "elements/grid";
+//@import "media/player";
 
+@import "elements/grid";
 @import "elements/widgets";
 @import "elements/comments";
 @import "elements/pagination";
