--- a/res/theme/sections/_navigation.scss
+++ b/res/theme/sections/_navigation.scss
@@ -93,7 +93,7 @@ ul.menu {
 }
 
 a.active--exact {
-  color: #ea4848;
+  color: #ea4848 !important;
 }
 
 /* Back to top link ------------------------------------*/
