--- a/res/assets/theme/sections/_search.scss
+++ b/res/assets/theme/sections/_search.scss
@@ -1,6 +1,6 @@
 #s {
   background: transparent url(/assets/theme/sprite.png) 15px -53px no-repeat;
-  border-color: #ebebec;
+  border-color: $color-border-light;
   height: 1.65em;
   line-height: 1.6em;
   margin-top: 0;
