--- a/res/assets/theme/elements/_grid.scss
+++ b/res/assets/theme/elements/_grid.scss
@@ -20,10 +20,10 @@
     font-size: 10px;
     text-align: right;
     font-weight: normal;
-    color: #AAA;
 
     label {
       font-weight: normal;
+      color: $color-grey-lighter;
     }
   }
 
