--- a/res/assets/theme/formatting/_forms.scss
+++ b/res/assets/theme/formatting/_forms.scss
@@ -1,47 +1,46 @@
 input,
 textarea {
-  color: #2c2f32;
-  background: #f4f4f7;
-  border: 1px solid #f4f4f7;
+  color: $color-grey-darkest;
+  background: $color-input;
+  border: 1px solid $color-border-light;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-size: 1em;
   padding: 6px 10px 5px 10px;
   width: 240px;
+
+  &:focus {
+    background: $color-input-focus;
+    border-color: $color-border-focus;
+  }
 }
 
 textarea {
   width: 90%;
 }
 
-input:focus,
-textarea:focus {
-  background: #fff;
-  border-color: #ccccce;
-}
-
 button {
-  background-color: #fcfcfc;
+  background-color: $color-button;
   background-image: linear-gradient(to bottom, #fcfcfc, #f7f7f7);
-  border: 1px solid #c4c4c4;
+  border: 1px solid $color-border-dark;
   border-radius: 3px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 2px #fff inset;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1), 0 1px 2px $white inset;
   cursor: pointer;
   font-family: 'Patua One', Georgia, serif;
   font-size: 16px;
   line-height: 1em;
   padding: 0.375em 10px;
-  text-shadow: 0 1px 0 #fff;
+  text-shadow: 0 1px 0 $white;
   width: auto;
-}
 
-button:hover {
-  background: #fff;
-  border-color: #969696;
-}
+  &:hover {
+    background: $white;
+    border-color: $color-border-dark;
+  }
 
-button:active {
-  position: relative;
-  top: 1px;
+  &:active {
+    position: relative;
+    top: 1px;
+  }
 }
 
 form.form {
@@ -62,7 +61,7 @@ form.form {
 
     &[required]:after {
       content: '*';
-      color: #ff0000;
+      color: $color-error;
       font-weight: 400;
     }
   }
@@ -70,10 +69,9 @@ form.form {
   input[type=text],
   input[type=email],
   textarea {
-    background-color: #fff;
+    background-color: $white;
     box-sizing: border-box;
     border-radius: 2px;
-    color: #333;
     display: block;
     float: none;
     font-size: 16px;
