--- a/res/assets/theme/layout/_layout.scss
+++ b/res/assets/theme/layout/_layout.scss
@@ -7,8 +7,8 @@
 }
 
 #header {
-  background: #fff;
-  border-bottom: 1px solid #ebebec;
+  background: $white;
+  border-bottom: 1px solid $color-border-light;
   //width: 100vh;
 }
 
@@ -31,7 +31,7 @@
 }
 
 #sidebar {
-  background: #fff;
+  background: $white;
   border-radius: 4px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   padding-top: 1.5em;
